# kdiff

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  kdiffui.rc  kdiffviewpart.desktop  main.cpp  mainwindow.cpp  mainwindow.h  opendialog.cpp  opendialog.h  org.kde.kdiff.desktop
interface/: CMakeLists.txt  kdiffinterface.cpp  kdiffinterface.h
kdiffpart/: CMakeLists.txt  connectwidget.cpp  connectwidget.h  diffscrollbar.cpp  diffscrollbar.h  filenavigator.cpp  filenavigator.h  filenavigatoritem.cpp  filenavigatoritem.h  fileview.cpp  fileview.h  icons.cpp  icons.h  kdiffpart.cpp  kdiffpart.desktop  kdiffpart.h  kdiffpartui.rc  kdiffview.cpp  kdiffview.h  shortcutsdialog.cpp  shortcutsdialog.h
kdiffpart/icons/: CMakeLists.txt
kdiffpart/icons/mimetypes/: CMakeLists.txt
libkdiff/: CMakeLists.txt  COPYING  Messages.sh  cvsdiffparser.cpp  cvsdiffparser.h  difference.cpp  difference.h  differencestringpair.h  diffhunk.cpp  diffhunk.h  diffmodel.cpp  diffmodel.h  diffmodelmap.cpp  diffmodelmap.h  diffparser.cpp  diffparser.h  diffprocess.cpp  diffprocess.h  diffprocessor.cpp  diffprocessor.h  diffsettings.cpp  diffsettings.h  info.cpp  info.h  levenshteintable.h  linemapper.cpp  linemapper.h  marker.h  modellist.cpp  modellist.h  parser.cpp  parser.h  parserbase.cpp  parserbase.h  perforceparser.cpp  perforceparser.h  stringlistpair.cpp  stringlistpair.h  utils.cpp  utils.h
settings/: CMakeLists.txt  applicationpage.cpp  applicationpage.h  diffpage.cpp  diffpage.h  settings.cpp  settings.h
